--- a/Parcial1-MCGA/.env.example
+++ b/Parcial1-MCGA/.env.example
@@ -1,2 +1,2 @@
-PORT=3000
-DATABASE_URL=mongodb+srv://fabricimarelli:fabrizio@clustermcga.6d3nnhp.mongodb.net/Parcial1_MCGA?retryWrites=true&w=majority
+PORT=4000
+DATABASE_URL=
